Remove data folder from repository and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,7 @@ Thumbs.db
 .vscode/
 .idea/
 
+/data/
+
 Account Segmentation & Revenue Team Structuring Exercise.pdf
 Account Segmentation & Revenue Team Structuring Exercise - Data.csv
